fixed uneven??

--- a/coming-soon.css
+++ b/coming-soon.css
@@ -19,7 +19,7 @@
   padding-right: var(--dl-space-space-sevenunits);
   flex-direction: column;
   background-size: cover;
-  background-image: url("https://play.teleporthq.io/static/svg/placeholders/no-image.svg");
+  background-image: url("public/normal-1000h.png");
 }
 .coming-soon-menu {
   width: 100%;
@@ -80,6 +80,7 @@
 }
 .coming-soon-centered {
   width: 100%;
+  height: 86px;
   display: flex;
   max-width: 1200px;
   box-sizing: initial;
@@ -89,7 +90,7 @@
   padding-right: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
   justify-content: space-between;
-  background-color: #ffffff;
+  background-color: #302d3c;
 }
 .coming-soon-left {
   height: 100%;
@@ -99,13 +100,9 @@
   flex-direction: row;
   padding-bottom: 38px;
 }
-.coming-soon-navlink {
-  display: contents;
-}
 .coming-soon-logo1 {
   width: var(--dl-size-size-small);
   margin-left: var(--dl-space-space-halfunit);
-  text-decoration: none;
 }
 .coming-soon-links1 {
   display: flex;
@@ -113,7 +110,8 @@
   margin-left: 33px;
   flex-direction: row;
 }
-.coming-soon-navlink1 {
+.coming-soon-navlink {
+  color: #ffffff;
   font-style: normal;
   font-family: Arial;
   font-weight: 700;
@@ -125,32 +123,36 @@
   text-decoration: none;
 }
 .coming-soon-link {
+  color: rgb(255, 255, 255);
   font-style: normal;
   font-family: Arial;
   font-weight: 700;
   padding-top: var(--dl-space-space-unit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius4);
+  padding-bottom: var(--dl-space-space-unit);
+  text-decoration: none;
+}
+.coming-soon-navlink1 {
+  color: rgb(255, 255, 255);
+  font-style: normal;
+  font-family: Arial;
+  font-weight: 700;
+  padding-top: var(--dl-space-space-unit);
+  margin-right: var(--dl-space-space-fourunits);
   padding-left: var(--dl-space-space-unit);
   border-radius: var(--dl-radius-radius-radius4);
   padding-bottom: var(--dl-space-space-unit);
   text-decoration: none;
 }
 .coming-soon-navlink2 {
+  color: #ffffff;
   font-style: normal;
   font-family: Arial;
   font-weight: 700;
   padding-top: var(--dl-space-space-unit);
   padding-left: var(--dl-space-space-unit);
-  border-radius: var(--dl-radius-radius-radius4);
-  padding-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.coming-soon-navlink3 {
-  font-style: normal;
-  font-family: Arial;
-  font-weight: 700;
-  padding-top: var(--dl-space-space-unit);
-  padding-left: var(--dl-space-space-unit);
-  border-radius: var(--dl-radius-radius-radius4);
+  border-radius: 100px;
   padding-bottom: var(--dl-space-space-unit);
   text-decoration: none;
 }
@@ -162,17 +164,21 @@
 }
 .coming-soon-dropdown-toggle {
   fill: #595959;
-  color: #595959;
+  color: #606060;
   width: 100%;
   display: inline-flex;
   align-items: center;
   padding-top: var(--dl-space-space-halfunit);
+  border-color: var(--dl-color-gray-black);
+  border-width: 1px;
   padding-left: var(--dl-space-space-unit);
-  border-radius: var(--dl-radius-radius-radius2);
+  border-radius: 100px;
   padding-right: var(--dl-space-space-unit);
   padding-bottom: var(--dl-space-space-halfunit);
+  background-color: #9614da;
 }
 .coming-soon-text05 {
+  color: #ffffff;
   font-size: 14px;
   font-style: normal;
   text-align: center;
@@ -213,12 +219,6 @@
   position: relative;
   border-radius: var(--dl-radius-radius-radius2);
 }
-.coming-soon-dropdown1 {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  border-radius: var(--dl-radius-radius-radius2);
-}
 .coming-soon-dropdown-toggle1 {
   fill: #595959;
   color: #595959;
@@ -246,13 +246,7 @@
   font-style: normal;
   font-weight: 500;
 }
-.coming-soon-dropdown2 {
-  cursor: pointer;
-  display: inline-block;
-  position: relative;
-  border-radius: var(--dl-radius-radius-radius2);
-}
-.coming-soon-dropdown3 {
+.coming-soon-dropdown1 {
   cursor: pointer;
   display: inline-block;
   position: relative;
@@ -285,7 +279,40 @@
   font-style: normal;
   font-weight: 500;
 }
-.coming-soon-dropdown4 {
+.coming-soon-dropdown2 {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  border-radius: var(--dl-radius-radius-radius2);
+}
+.coming-soon-dropdown-toggle3 {
+  fill: #595959;
+  color: #595959;
+  width: 100%;
+  display: inline-flex;
+  transition: 0.3s;
+  align-items: center;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius4);
+  padding-right: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-halfunit);
+  text-decoration: none;
+}
+.coming-soon-dropdown-toggle3:hover {
+  fill: #fff;
+  color: #fff;
+  background-color: #595959;
+}
+.coming-soon-text08 {
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+}
+.coming-soon-dropdown3 {
   cursor: pointer;
   display: inline-block;
   position: relative;
@@ -310,12 +337,12 @@
   padding-right: var(--dl-space-space-oneandhalfunits);
   flex-direction: column;
   padding-bottom: var(--dl-space-space-unit);
-  background-color: #000000;
+  background-color: #9614da;
 }
 .coming-soon-get-started:hover {
   background-color: #5228F5;
 }
-.coming-soon-text08 {
+.coming-soon-text09 {
   color: rgb(255, 255, 255);
   font-style: normal;
   font-weight: 600;
@@ -336,7 +363,7 @@
   align-items: center;
   flex-direction: column;
 }
-.coming-soon-text09 {
+.coming-soon-text10 {
   color: #ffffff;
   font-size: 72px;
   align-self: center;
@@ -345,13 +372,39 @@
   font-weight: 700;
   line-height: 80px;
 }
-.coming-soon-text12 {
+.coming-soon-text13 {
   color: rgb(238, 233, 254);
   font-size: 20px;
   max-width: 600px;
   margin-top: 16px;
   text-align: center;
   line-height: 30px;
+}
+.coming-soon-navlink4 {
+  display: contents;
+}
+.coming-soon-get-started1 {
+  cursor: pointer;
+  display: flex;
+  transition: 0.3s;
+  align-items: center;
+  padding-top: var(--dl-space-space-unit);
+  padding-left: var(--dl-space-space-oneandhalfunits);
+  border-radius: 56px;
+  padding-right: var(--dl-space-space-oneandhalfunits);
+  flex-direction: column;
+  padding-bottom: var(--dl-space-space-unit);
+  text-decoration: none;
+  background-color: rgb(243, 136, 136);
+}
+.coming-soon-get-started1:hover {
+  background-color: #5228F5;
+}
+.coming-soon-text14 {
+  color: rgb(255, 255, 255);
+  font-style: normal;
+  font-weight: 600;
+  background-color: rgb(243, 136, 136);
 }
 @media(max-width: 991px) {
   .coming-soon-hero {
@@ -390,6 +443,9 @@
     width: 100%;
     max-width: 1200px;
   }
+  .coming-soon-get-started1 {
+    display: none;
+  }
 }
 @media(max-width: 767px) {
   .coming-soon-hero {
@@ -420,18 +476,21 @@
     margin-top: var(--dl-space-space-fourunits);
     justify-content: center;
   }
-  .coming-soon-text09 {
+  .coming-soon-text10 {
     color: rgb(255, 255, 255);
     font-size: 32px;
     font-style: normal;
     font-weight: 700;
     line-height: 36px;
   }
-  .coming-soon-text12 {
+  .coming-soon-text13 {
     color: rgb(238, 233, 254);
     font-size: 16px;
     margin-top: var(--dl-space-space-unit);
     line-height: 24px;
+  }
+  .coming-soon-get-started1 {
+    display: none;
   }
 }
 @media(max-width: 479px) {
@@ -445,7 +504,7 @@
     align-items: center;
     justify-content: center;
   }
-  .coming-soon-text12 {
+  .coming-soon-text13 {
     color: #EEE9FE;
   }
 }
