--- a/index.css
+++ b/index.css
@@ -484,8 +484,8 @@
   border-color: var(--dl-color-gray-black);
 }
 .home-image3 {
-  width: 589px;
-  height: 565px;
+  width: 575px;
+  height: 575px;
   object-fit: cover;
   border-color: var(--dl-color-gray-500);
   border-width: 3px;
